force-app/main/default/objects/CJFW_SalesAdjustment__c/CJFW_SalesAdjustment__c.object-meta.xml
<CustomObject>
    <description>[P2] 매출채권 - 매출 조정</description>
    <label>매출조정</label>
    <nameField>
        <displayFormat>SA{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Sales Adjustment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>