force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <defaultValue>DATE( YEAR( TODAY() ) , MONTH( TODAY() ), 1) -1</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>