force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/FM_CodeSoldTo__c.field-meta.xml
<CustomField>
    <fullName>FM_CodeSoldTo__c</fullName>
    <formula>&quot;(&quot; + SoldTo__r.CustomerID__c + &quot;) &quot; +  HYPERLINK( SoldTo__c ,  SoldTo__r.Name )</formula>
    <label>(Code) Sold To</label>
    <type>Text</type>
</CustomField>