force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/FM_SalesAdjustmentPeriod__c.field-meta.xml
<CustomField>
    <fullName>FM_SalesAdjustmentPeriod__c</fullName>
    <formula>TEXT ( YEAR( StartDate__c ) ) +&quot;-&quot;+ 
 IF(MONTH(StartDate__c ) &lt; 10, &quot;0&quot; + TEXT(MONTH(StartDate__c )), TEXT(MONTH(StartDate__c )) ) +&quot;-&quot;+ 
 IF(DAY(StartDate__c ) &lt; 10,  &quot;0&quot; + TEXT(DAY(StartDate__c )), TEXT(DAY(StartDate__c )) ) + 
&quot; ~ &quot; +
TEXT ( YEAR( EndDate__c ) )+&quot;-&quot; + 
 IF(MONTH(EndDate__c ) &lt; 10, &quot;0&quot; + TEXT(MONTH(EndDate__c )), TEXT(MONTH(EndDate__c )) ) +&quot;-&quot;+ 
 IF(DAY(EndDate__c ) &lt; 10,  &quot;0&quot; + TEXT(DAY(EndDate__c )), TEXT(DAY(EndDate__c )) )</formula>
    <label>Sales Adjustment Period</label>
    <type>Text</type>
</CustomField>