force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/FM_Team__c.field-meta.xml
<CustomField>
    <fullName>FM_Team__c</fullName>
    <formula>SoldTo__r.Owner.TeamLabel__c</formula>
    <label>Team</label>
    <type>Text</type>
</CustomField>