force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/SalesAdjustmentBillingDate__c.field-meta.xml
<CustomField>
    <fullName>SalesAdjustmentBillingDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Sales Adjustment Billing Date</label>
    <type>Date</type>
</CustomField>