force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/SalesAdjustmentDate__c.field-meta.xml
<CustomField>
    <fullName>SalesAdjustmentDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Sales Adjustment Date</label>
    <type>Date</type>
</CustomField>