force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/SalesAdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>SalesAdjustmentType__c</fullName>
    <label>Sales Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>상품 매출조정</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>VoC 조정</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>마감 차액조정</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>