force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Existing Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.CustomerType__c</field>
            <operation>equals</operation>
            <value>본점, 판매처, 관리처-배송, 관리처-분할, 관리처-2차</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Adjustment_Ship_To</relationshipName>
    <type>Lookup</type>
</CustomField>