force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Existing Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.CustomerType__c</field>
            <operation>equals</operation>
            <value>본점, 판매처</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>매출조정 (Account)</relationshipLabel>
    <relationshipName>Sales_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>