force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>IF( MONTH( TODAY() ) = 12 , 
 DATE( YEAR( TODAY() ) - 1 , 12 , 1),
 DATE( YEAR( TODAY() ) , MONTH( TODAY() ) - 1 , 1) )</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>