force-app/main/default/objects/CJFW_SalesAdjustment__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>전체</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>과세</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>면세</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>