force-app/main/default/objects/CJFW_SalesAdjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FM_CodeSoldTo__c</columns>
    <columns>FM_CodeShipTo__c</columns>
    <columns>FM_MA__c</columns>
    <columns>SalesAdjustmentDate__c</columns>
    <columns>FM_SalesAdjustmentPeriod__c</columns>
    <columns>Tax__c</columns>
    <columns>SalesAdjustmentType__c</columns>
    <columns>SalesAdjustmentBillingDate__c</columns>
    <columns>ApprovalStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>